<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFF9C4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.graphdemo.MainActivity" >

        <tud.kom.dss6.localsiri.monitor.Graph.LineGraph
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <TableLayout
            android:id="@+id/graph_legends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/graph"
            android:layout_below="@+id/graph"
            android:paddingTop="5dp" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/g_battery_legend_field"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="@color/batteryline"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/battery_legend"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_frequency_legend"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="@color/frequencyLine"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/frequency_legend"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="2dp" >

                <Button
                    android:id="@+id/reload_graph"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="#ff4d98c1"
                    android:text="@string/reload_graph"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/graph"
            android:layout_below="@+id/graph_legends"
            android:paddingTop="5dp" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/g_date"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#ff4d98c1"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/date"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_date_field"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="#FF5252"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/empty"
                    android:padding="5dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/g_BatteryLevel"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#ff4d98c1"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="Battery Level:"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_batteryLevel_field"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="#FF5252"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/empty"
                    android:padding="5dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/g_mUserPreference_Location"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="#ff4d98c1"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="Self Optimize:"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_mUserPreference_field"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="#000"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/empty"
                    android:padding="5dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/g_mLocationFrequency"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="#ff4d98c1"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="Frequency:"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_mLocationFrequency_field"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="#000"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/empty"
                    android:padding="5dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/g_mLocationPriority"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="#ff4d98c1"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="Priority:"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_mLocationPriority_field"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="#000"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/empty"
                    android:padding="5dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>